@@ -1,6 +1,7 @@
 1.2.5i3:
     Core & Setup:
     * 0884 New options --oid and --extraoid for cmk --snmpwalk...
+    * 0940 Fixed various core SIGSEGV when using malformed livestatus queries...
     * 0785 FIX: Availability: fixed memory leak in table statehist...
     * 0903 FIX: availability: fixed bug causing the availability feature not considering timeperiod transitions
     * 0888 FIX: Fix SNMP inventory check in simulation mode
